--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 
 <p>Power Gaming</p>
 
-<p> Peças de pc la vou mostrar informações sobre ṕrodutos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
-Como:processador,memoria,memoria ram , placa mae ,placa de video,hd,gabinetes , notbooks ,peças e etc... ;</p>
+<p> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+Como:processador, memoria, memoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc... ;</p>
