--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html>
 <h1>Site gamer</h1>
 
 <p>Power Gaming</p>
 
-<p> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
-Como:processador, memoria, memoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc... ;</p>
+<p> Peças de PC la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+Como:processador, memoria, memoria ram, placa mãe, placa de video, hd, gabinetes, notbooks, peças e etc... ;</p>
+</html>
