--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-
 <!DOCTYPE html>
 <html>
+
     <h1>Power Gaming</h1>
-    <p>Site gamer</p>
+
+    <p>Site dos gamers</p>
     <p> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
     Como:processador, memoria, memoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc
+
 </html>
