--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-
-    <meta charset=”UTF8”>
-
+    <head>
+        <meta charset=”UTF8”>
+        <h1>Power Gaming</h1>
+    </head>
+    
+    <body>
     <h1>Power Gaming</h1>
 
-    <p>Site dos gamers</p>
-    <p> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
-    Como:processador, memoria, memoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc
+        <p>Site dos gamers</p>
+        <p> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+        Como:processador, memoria, memoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc
+    </body>
 
 </html>
