--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <body>
 
-        <h1>Power Gaming</h1>
+        <h1 style="text-align: center">Power Gaming</h1>
         
-        <p><strong>site dos gamers</strong></p>
+        <p style="font-size: 20px"><em></em>><strong>site dos gamers</strong></p>
 
-        <p> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+        <p style="font-size: 20px"><em></em>> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
         Como:processador, memoria, memoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc
 
     </body>
