--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
         
         <meta charset=”UTF8”>
         <title>Power Gaming</title>
-
-        <style>
-            p {
-                text-align: center
-            }
-        </style>
+        <link rel="styleheed" href="style.css">
 
     </head>
 
