--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <h1 style="text-align: center">Power Gaming</h1>
         
-        <h1><p style="font-size: 20px; text-align: center"><em><strong>site dos gamers</strong></em></p>
+        <p style="font-size: 20px; text-align: center"><em><strong>site dos gamers</strong></em></p>
         <p style="font-size: 20px; text-align: center"><em> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
-        Como:processador, memoria, mecmoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc</em></p></h1>
+        Como:processador, memoria, mecmoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc</em></p>
 
     </body>
 
