--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
 
-        <h1 style="text-align: center">Power Gaming</h1>
+        <h1 style="text-align: center; background: rgba(0, 74, 104, 0.658) ">Power Gaming</h1>
         
         <p style="font-size: 20px; text-align: center"><em><strong>site dos gamers</strong></em></p>
         <p style="font-size: 20px; text-align: center"><em> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
