--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <h1 style="text-align: center; background: rgba(0, 74, 104, 0.658) ">Power Gaming</h1>
         
-        <p style="font-size: 20px; text-align: center"><em><strong>site dos gamers</strong></em></p>
-        <p style="font-size: 20px; text-align: center"><em> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+        <p style="font-size: 20px; text-align: center; background: rgba(0, 74, 104, 0.658) "><em><strong>site dos gamers</strong></em></p>
+        <p style="font-size: 20px; text-align: center; background: rgba(0, 74, 104, 0.658) "><em> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
         Como:processador, memoria, mecmoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc</em></p>
 
     </body>
