--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <h1>Power Gaming</h1>
         
-        <p><em><strong>site dos gamers</strong></em></p>
-        <p><em> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
-        Como:processador, memoria, mecmoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc</em></p>
+        <p><em><strong>o Site dos Gamers</strong></em></p>
+        <p><em><strong> Peças de pc la vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+        Como:processador, memoria, mecmoria ram, placa mae, placa de video, hd, gabinetes, notbooks, peças e etc</strong></em></p>
 
     </body>
 
