--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </head>
 
     <body>
-        <img src="Foto computacional-2"
+        <img src="Foto computacional-2">
+        
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
