--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="banner.jpg-20220905T163944Z-001"  
+        <img src="banner.jpg-20220905T163944Z-001"> 
          
         <h1><strong>POWER GAMING</strong></h1>
         
