--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="banner.jpg-20220905T163944Z-001"> 
+        <img src="https://cdn.mos.cms.futurecdn.net/XZLrRBfbM3mVWgJuSkTpF5-970-80.jpg.webp"> 
          
         <h1><strong>POWER GAMING</strong></h1>
         
