--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://cdn.mos.cms.futurecdn.net/XZLrRBfbM3mVWgJuSkTpF5-970-80.jpg.webpurl"> 
+        <img id="https://"src="https://cdn.mos.cms.futurecdn.net/XZLrRBfbM3mVWgJuSkTpF5-970-80.jpg.webpurl"> 
          
         <h1><strong>POWER GAMING</strong></h1>
         
