--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://i.pinimg.com/736x/71/0d/23/710d23709bbfd4e3a3a7d8698e30a271--du-site-site-web.jpgurl"> 
+        <img src="https://i.pinimg.com/736x/71/0d/23/710d23709bbfd4e3a3a7d8698e30a271--du-site-site-web.jpg.url"> 
          
         <h1><strong>POWER GAMING</strong></h1>
         
