--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://i.pinimg.com/originals/a0/f4/33/a0f433603c8a62e9df3d7d25d3b3649e.pngurl">
+        <img src="https://tm.ibxk.com.br/2018/09/17/17131232821071.jpg?ims=1120x420url">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
