--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://tm.ibxk.com.br/2018/09/17/17131232821071.jpg?ims=1120x420url">
+        <img src="https://i.redd.it/5sg2z3clrt551.pngurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
