--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://i.redd.it/5sg2z3clrt551.pngurl">
+        <img src="https://www.nvidia.com/content/dam/en-zz/Solutions/geforce/community/wallpapers/nvidia-geforce-gtx-titan-z-wallpapers-now-available/GTX-TITAN-Z-1280x720-Wallpaper-Exploded-5.jpgurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
