--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://i.redd.it/5sg2z3clrt551.pngurl">
+        <img src="https://images.hdqwalls.com/wallpapers/nvidia-rtx-dark-abstract-4k-nx.jpgurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
