--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://images.hdqwalls.com/wallpapers/nvidia-rtx-dark-abstract-4k-nx.jpgurl">
+        <img src="https://hexus.net/media/uploaded/2018/8/cb3ef351-2986-4a37-b9ff-cb980479c029.jpg">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
