--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://tm.ibxk.com.br/2018/09/17/17131232821071.jpg?ims=1120x420url">
+        <img src="https://cdn.mos.cms.futurecdn.net/XZLrRBfbM3mVWgJuSkTpF5.jpgurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
