--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://cdn.mos.cms.futurecdn.net/XZLrRBfbM3mVWgJuSkTpF5.jpgurl">
+        <img src="https://t2.tudocdn.net/608826?w=646&h=284url">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
