--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://t2.tudocdn.net/608826?w=646&h=284url">
+        <img src="https://img.freepik.com/fotos-gratis/ilustracao-legal-com-formas-geometricas-e-luzes-de-laser-de-neon-perfeita-para-papeis-de-parede_181624-34458.jpg?w=2000url">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
