--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://img.freepik.com/fotos-gratis/ilustracao-legal-com-formas-geometricas-e-luzes-de-laser-de-neon-perfeita-para-papeis-de-parede_181624-34458.jpg?w=2000url">
+        <img src="https://assets2.razerzone.com/images/pnx.assets/618c0b65424070a1017a7168ea1b6337/razer-wallpapers-page-hero-mobile.jpgurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
