--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://assets2.razerzone.com/images/pnx.assets/618c0b65424070a1017a7168ea1b6337/razer-wallpapers-page-hero-mobile.jpgurl">
+        <img src="https://www.gigabyte.com/FileUpload/Global/KeyFeature/2029/innergigabyteimages/kf-img-bg.jpgurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
