--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://i.pinimg.com/originals/d4/26/b9/d426b9f762c3a0bab59c270090c73580.jpgurl">
+        <img src="https://images5.alphacoders.com/550/550948.jpgurl">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
