--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img src="https://cutewallpaper.org/21/nvidia-rtx-wallpaper/Nvidia-unveils-the-GeForce-RTX-2080-Ti-RTX-2080-and-RTX-.jpg">
+        <img src="https://www.nvidia.com/content/dam/en-zz/Solutions/geforce/ampere/wallpapers/rtx-3090/3090-wallpaper-Top.png">
         <h1><strong>POWER GAMING</strong></h1>
         
         <p><em><strong>o Site dos Gamers</strong></em></p>
