--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
 
     <body>
+
+        <img src="3090-wallpaper-Top.png">
     
         <h1><strong>POWER GAMING</strong></h1>
         
