--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>benefícios</h2>
         </div> 
         
-        <div>
+        <div class="beneficios">
             <ul> 
                 
                 <li class="itens">Peças De Alta Qualidade</li> 
