--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1><strong>POWER GAMING</strong></h1>
             
             <p><em><strong>o Site dos Gamers</strong></em></p>
-            <p><em><strong> Peças de pc aqui vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
+            <p><em><strong> Peças de pc, aqui vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
             Como: processador, memoria, memória-ram, placa mãe, placa de video, hd, gabinetes, notbooks, peças e etc</strong></em></p>
             
         </div> 
