--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <h2>benefícios</h2>
             <ul> 
                 
-                <li class="itens">Peças De Alta Qualidade</li> 
-                <li class="itens">Verificação De Avarias</li>  
-                <li class="itens">Garantia De Produtos</li> 
-                <li class="itens">Envio Para Todo Brasil</li>   
+                <Li class="itens">Peças De Alta Qualidade</Li> 
+                <Li class="itens">Verificação De Avarias</Li>  
+                <Li class="itens">Garantia De Produtos</Li> 
+                <Li class="itens">Envio Para Todo Brasil</Li>   
             
             </ul>
 
