--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta charset=”UTF8”>
         <title>Power Gaming</title>
         <link rel="stylesheet" href="style.css">
-        <background img
 
     </head>
 
@@ -26,10 +25,10 @@
             <h2>benefícios</h2>
             <ul> 
                 
-                <Li class="itens">Peças De Alta Qualidade</Li> 
-                <Li class="itens">Verificação De Avarias</Li>  
-                <Li class="itens">Garantia De Produtos</Li> 
-                <Li class="itens">Envio Para Todo Brasil</Li>   
+                <li class="itens">Peças De Alta Qualidade</li> 
+                <li class="itens">Verificação De Avarias</li>  
+                <li class="itens">Garantia De Produtos</li> 
+                <li class="itens">Envio Para Todo Brasil</li>   
             
             </ul>
 
