--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img id="placavideo" src="3090-wallpaper-Top.png">
 
     <div class="principal">
         <h1><strong>POWER GAMING</strong></h1>
