--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+<header>
+    <h1>POWER GAMING</h1>
+</header>
+
     <img id="placavideo" url="3090-wallpaper-Top.png">
 
     <div class="principal">
@@ -22,6 +26,7 @@
     
     <div class="beneficios">
         <h2>benefícios</h2>
+
         <ul> 
             
             <li class="itens">Peças De Alta Qualidade</li> 
