--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h3>POWER GAMING</h3>
+        POWER GAMING
     </header>
 
     <img id="placavideo" url="3090-wallpaper-Top.png">
