--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<html lang="pt/br">
+
 <head>
     
     <meta charset=”UTF8”>
@@ -42,3 +44,5 @@
     </div>
     
 </body>
+
+</html>
