--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1><img id="logo" src="https://www.google.com.br/url?sa=i&url=https%3A%2F%2Fpt.pngtree.com%2Fso%2Fpe%25C3%25A7as-de-computador&psig=AOvVaw2KpwPzCGYZ4nEWRlJpJly1&ust=1665492962022000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCLj-2Pna1foCFQAAAAAdAAAAABAD"</h1>
+        <h1><img id="logo" src=""</h1>
     </header>
 
 </body>
