--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1><img id="logo" src="ventuinha.png"</h1>
+        <h1><img id="logo" src="logo.png"</h1>
     </header>
 
 </body>
