--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1><img id="logo" src="logo.png"</h1>
+        <h1><img id="logo" src="https://www.google.com.br/url?sa=i&url=https%3A%2F%2Fwww.pngegg.com%2Fpt%2Fpng-esymf&psig=AOvVaw3EqYetjBZPV2Yy3AynRZHk&ust=1665493532539000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCIDFyIrd1foCFQAAAAAdAAAAABAI"</h1>
     </header>
 
 </body>
