--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1><img id="logo" src="https://e7.pngegg.com/pngimages/596/350/png-clipart-computer-icons-computer-configuration-encapsulated-postscript-computer-computer-data.png"</h1>
+        <h1><img id="logo" src="https://t3.ftcdn.net/jpg/04/91/57/74/360_F_491577439_O5cxGEpdI9fIW0RgvDk3TaERwL9pxNZp.jpg"</h1>
     </header>
 
 </body>
