--- a/produtos.html
+++ b/produtos.html
@@ -17,9 +17,9 @@
     </header>
 
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Pagina inicial</li>
+        <li>Produtos</li>
+        <li>Contato</li>
     </ul>
 
 </body>
