--- a/produtos.html
+++ b/produtos.html
@@ -17,7 +17,7 @@
     </header>
 
     <ul>
-        <li>Pagina inicial</li>
+        <li><a>Pagina inicial</a></li>
         <li>Produtos</li>
         <li>Contato</li>
     </ul>
