--- a/produtos.html
+++ b/produtos.html
@@ -20,6 +20,7 @@
         <li><a>Pagina inicial</a></li>
         <li>Produtos</li>
         <li>Contato</li>
+        <li>gay</li>
     </ul>
 
 </body>
