--- a/produtos.html
+++ b/produtos.html
@@ -17,10 +17,9 @@
     </header>
 
     <ul>
-        <li><a>Pagina inicial</a></li>
-        <li>Produtos</li>
-        <li>Contato</li>
-        <li>gay</li>
+        <li><a href="index.html">Pagina inicial</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="contato.html">Contato</a></li>
     </ul>
 
 </body>
