--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li class="itens">Verificação De Avarias</li>  
             <li class="itens">Garantia De Produtos</li> 
             <li class="itens">Envio Para Todo Brasil</li>   
+            <li><a href="produtos.html">produtos</a></li>
         
         </ul>
         
