--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3>POWER GAMING</h3>
     </header>
 
-    <img id="placavideo" url="3090-wallpaper-Top.png">
+    <h4><img id="logo" src="https://t3.ftcdn.net/jpg/04/91/57/74/360_F_491577439_O5cxGEpdI9fIW0RgvDk3TaERwL9pxNZp.jpg"></h4>
 
     <div class="principal">
         <h1><strong>POWER GAMING</strong></h1>
