--- a/produtos.html
+++ b/produtos.html
@@ -2,29 +2,25 @@
 
 <html lang="pt-br">
 
-<head>
+    <head>
 
     <meta charset="UTF-8">
     <title>Produtos - Power Gaming</title>
     <link rel="stylesheet" href="produtos.css">
 
-</head>
+    </head>
 
 <body>
-
     <header>
-        
         <h1><img id="logo" src="https://t3.ftcdn.net/jpg/04/91/57/74/360_F_491577439_O5cxGEpdI9fIW0RgvDk3TaERwL9pxNZp.jpg"></h1>
-    
-
-    <ul>
-        <li><a href="index.html">Pagina inicial</a></li>
-        <li><a href="produtos.html">Produtos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-    </ul>
-
+        <nav>
+             <ul>
+                <li><a href="index.html">Pagina inicial</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+             </ul>
+        </nav>
     </header>
-
 </body>
 
 </html>
