--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p><em><strong> Peças de pc, aqui vou mostrar informações sobre produtos vou dizer as qualidades e defeitos e o quanto recomendo la vou por varias peças falar especificações  
         Como: processador, memoria, memória-ram, placa mãe, placa de video, hd, gabinetes, notbooks, peças e etc</strong></em></p>
         
+        <h4><img id="logo" url="https://t3.ftcdn.net/jpg/04/91/57/74/360_F_491577439_O5cxGEpdI9fIW0RgvDk3TaERwL9pxNZp.jpg"></h4>
 
     </div> 
     
