--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,8 @@
 
     <meta charset="UTF-8">
     <title>Produtos - Power Gaming</title>
+
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="produtos.css">
 
     </head>
