--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul> 
             
             <li class="itens">Peças De Alta Qualidade</li> 
+            <li class="itens">Especificações Detalhadas</li>
             <li class="itens">Verificação De Avarias</li>  
             <li class="itens">Garantia De Produtos</li> 
             <li class="itens">Envio Para Todo Brasil</li>   
