--- a/produtos.html
+++ b/produtos.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+        <div class="caixa-nav">
         <h1><img id="logo" src="https://t3.ftcdn.net/jpg/04/91/57/74/360_F_491577439_O5cxGEpdI9fIW0RgvDk3TaERwL9pxNZp.jpg"></h1>
         <nav>
              <ul>
@@ -22,6 +23,7 @@
                 <li><a href="contato.html">Contato</a></li>
              </ul>
         </nav>
+        </div>
     </header>
 </body>
 
